# TFBindFormer

./: LICENSE  README.md  environment.yml  pyproject.toml
analysis/ablation/: 3diOnlyEmbedder.py  aaOnlyEmbedder.py  ablation_figure.py  prostt5_embedder.py
analysis/attention_map/: 1dHeatMap.py  get_att_weights.py
analysis/data_distribution/: counts_labels.py  plot_test.py  plot_train.py  plot_val.py
scripts/: eval.py  extract_tf_embeddings.py  generate_3di_tokens.sh  train.py
src/: model.py  utils.py
src/architectures/: binding_predictor.py  cross_attention_encoder.py  tbinet_dna_encoder.py
