[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfbindformer"
version = "0.1.0"
description = "Hybrid cross-attention Transformer for TF–DNA binding prediction"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Your Name", email = "your.email@institution.edu" }
]

dependencies = [
  "torch",
  "numpy",
  "pandas",
  "scikit-learn",
  "pyyaml"
]

[tool.setuptools]
package-dir = { "tfbindformer" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
