[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfbindformer"
version = "0.1.0"
description = "Hybrid cross-attention Transformer for TF–DNA binding prediction"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Ping Liu", email = "pl5vw@missouri.edu" }
]

dependencies = [
  "torch",
  "pytorch-lightning",
  "numpy",
  "pandas",
  "matplotlib",
  "wandb",
  "torchmetrics",
  "scikit-learn",
  "biopython",
  "transformers",
  "sentencepiece",
  "tqdm"
]

[tool.setuptools]
package-dir = { "tfbindformer" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
